--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "msw": "^0.44.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
+  },
+  "proxy": "http://localhost:3000",
+  "homepage": "."
 }
