--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.24.2",
     "chromedriver": "^103.0.0",
     "geckodriver": "^3.0.2",
     "msw": "^0.44.2",
