--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:test": "MSW=off react-scripts start",
     "test:nightwatch": "npx nightwatch tests/nightwatch.spec.js",
     "test:playwright": "npx playwright test playwright",
-    "test:testcafe": "testcafe chrome tests/testcafe.spec.js"
+    "test:testcafe": "testcafe chrome tests/testcafe.spec.js",
+    "test:webdriverio": "wdio run wdio.conf.js"
   },
   "eslintConfig": {
     "extends": [
@@ -34,11 +35,16 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.24.2",
+    "@wdio/cli": "^7.20.9",
+    "@wdio/local-runner": "^7.20.9",
+    "@wdio/mocha-framework": "^7.20.7",
+    "@wdio/spec-reporter": "^7.20.8",
     "chromedriver": "^103.0.0",
     "geckodriver": "^3.0.2",
     "msw": "^0.44.2",
     "nightwatch": "^2.3.0",
-    "testcafe": "^1.20.0"
+    "testcafe": "^1.20.0",
+    "wdio-chromedriver-service": "^7.3.2"
   },
   "msw": {
     "workerDirectory": "public"
