--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:testcafe": "testcafe chrome tests/testcafe.spec.js",
     "test:webdriverio": "wdio run wdio.conf.js",
     "test:cypress": "cypress run",
-    "test:cypress:open": "cypress open"
+    "test:cypress:open": "cypress open",
+    "test:puppeteer": "jest tests/puppeteer.spec.js"
   },
   "eslintConfig": {
     "extends": [
@@ -44,8 +45,10 @@
     "chromedriver": "^103.0.0",
     "cypress": "^10.3.1",
     "geckodriver": "^3.0.2",
+    "jest": "^28.1.3",
     "msw": "^0.44.2",
     "nightwatch": "^2.3.0",
+    "puppeteer": "^15.5.0",
     "testcafe": "^1.20.0",
     "wdio-chromedriver-service": "^7.3.2"
   },
